# Lumine

./: .gitignore  CMakeLists.txt  README.md
include/lumine/: convolver.hpp  image.hpp  kernel.hpp  preprocessing.hpp  types.hpp
src/: convolver.cpp  image.cpp  kernel.cpp  main.cpp  preprocessing.cpp
